HTML dan CSS Vaza beres.

--- a/daftar-klc.html
+++ b/daftar-klc.html
@@ -15,8 +15,8 @@
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="shortcut icon" href="images/logo-karisma.jpg" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="images/logo-karisma.jpg">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="css/responsive.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
+    <!-- Foto Kegiatan-->
+    <link rel="stylesheet" href="css/daftar-klc.css">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -55,24 +57,24 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<img src="images/logo-seo.png" alt="" />
+					<img src="images/logo-karisma.jpg" alt="" class="logo-karisma"/>
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars-seo" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
 				  <span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbars-seo">
 					<ul class="navbar-nav ml-auto">
-						<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">Tentang Kami</a></li>
-						<li class="nav-item"><a class="nav-link" href="case-study.html">Daftar KLC</a></li>
+						<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+						<li class="nav-item"><a class="nav-link" href="about.html">Tentang Kami</a></li>
+						<li class="nav-item"><a class="nav-link" href="daftar-klc.html">Daftar KLC</a></li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">Lainnya </a>
 							<div class="dropdown-menu" aria-labelledby="dropdown-a">
-								<a class="dropdown-item" href="services.html">Blog</a>
-								<a class="dropdown-item" href="upcoming-events.html">Upcoming Events</a>
+								<a class="dropdown-item" href="blog.html">Blog</a>
+								<a class="dropdown-item" href="upcoming-events.html">Agenda Mendatang</a>
 								<a class="dropdown-item" href="organigram.html">Organigram</a>
 							</div>
-						</li>						
+						</li>
 						<li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
 						<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 					</ul>
@@ -114,30 +116,30 @@
 
             <div id="da-thumbs" class="da-thumbs portfolio">
                 <div class="post-media pitem item-w1 item-h1 cat1">
-                    <a href="images/version_01.jpg" data-rel="prettyPhoto[gal]">
-                        <img src="images/version_01.jpg" alt="" class="img-responsive">
+                    <a href="images/adik-1.jpeg" class="foto-kegiatan" data-rel="prettyPhoto[gal]">
+                        <img src="images/adik-1.jpeg" class="foto-kegiatan" alt="" class="img-responsive">
                         <div>
-							<h3>Web Design Project</h3>
+							<h3>Kelas Privat</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin porta in magna egestas ornare. Fusce tortor nibh, interdum eget consequat molestie, blandit vitae sapien.</p>
                             <i class="flaticon-unlink"></i>
                         </div>
                     </a>
                 </div>
                 <div class="post-media pitem item-w1 item-h1 cat2">
-                    <a href="images/version_02.jpg" data-rel="prettyPhoto[gal]">
-                        <img src="images/version_02.jpg" alt="" class="img-responsive">
+                    <a href="images/adik-2.jpeg" class="foto-kegiatan" data-rel="prettyPhoto[gal]">
+                        <img src="images/adik-2.jpeg" class="foto-kegiatan" alt="" class="img-responsive">
                         <div>
-							<h3>Web Design Project</h3>
+							<h3>Kelas Intensif</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin porta in magna egestas ornare. Fusce tortor nibh, interdum eget consequat molestie, blandit vitae sapien.</p>
                             <i class="flaticon-unlink"></i>
                         </div>
                     </a>
                 </div>
                 <div class="post-media pitem item-w1 item-h1 cat1">
-                    <a href="images/version_03.jpg" data-rel="prettyPhoto[gal]">
-                        <img src="images/version_03.jpg" alt="" class="img-responsive">
+                    <a href="images/adik-3.jpeg" class="foto-kegiatan" data-rel="prettyPhoto[gal]">
+                        <img src="images/adik-3.jpeg" class="foto-kegiatan" alt="" class="img-responsive">
                         <div>
-							<h3>Web Design Project</h3>
+							<h3>Science Project</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin porta in magna egestas ornare. Fusce tortor nibh, interdum eget consequat molestie, blandit vitae sapien.</p>
                             <i class="flaticon-unlink"></i>
                         </div>
@@ -145,8 +147,8 @@
                 </div>
 
                 <div class="post-media pitem item-w1 item-h1 cat3">
-                    <a href="images/version_04.jpg" data-rel="prettyPhoto[gal]">
-                        <img src="images/version_04.jpg" alt="" class="img-responsive">
+                    <a href="images/version_04.jpg" class="foto-kegiatan" data-rel="prettyPhoto[gal]">
+                        <img src="images/version_04.jpg" class="foto-kegiatan" alt="" class="img-responsive">
                         <div>
 							<h3>Web Design Project</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin porta in magna egestas ornare. Fusce tortor nibh, interdum eget consequat molestie, blandit vitae sapien.</p>
@@ -155,8 +157,8 @@
                     </a>
                 </div>
                 <div class="post-media pitem item-w1 item-h1 cat2">
-                    <a href="images/version_05.jpg" data-rel="prettyPhoto[gal]">
-                        <img src="images/version_05.jpg" alt="" class="img-responsive">
+                    <a href="images/version_05.jpg" class="foto-kegiatan" data-rel="prettyPhoto[gal]">
+                        <img src="images/version_05.jpg" class="foto-kegiatan" alt="" class="img-responsive">
                         <div>
 							<h3>Web Design Project</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin porta in magna egestas ornare. Fusce tortor nibh, interdum eget consequat molestie, blandit vitae sapien.</p>
@@ -165,8 +167,8 @@
                     </a>
                 </div>
                 <div class="post-media pitem item-w1 item-h1 cat1">
-                    <a href="images/version_06.jpg" data-rel="prettyPhoto[gal]">
-                        <img src="images/version_06.jpg" alt="" class="img-responsive">
+                    <a href="images/version_06.jpg" class="foto-kegiatan" data-rel="prettyPhoto[gal]">
+                        <img src="images/version_06.jpg" class="foto-kegiatan" alt="" class="img-responsive">
                         <div>
 							<h3>Web Design Project</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin porta in magna egestas ornare. Fusce tortor nibh, interdum eget consequat molestie, blandit vitae sapien.</p>
@@ -292,10 +294,9 @@
                 <div class="col-lg-4 col-md-6 col-xs-12">
                     <div class="widget clearfix">
                         <div class="widget-title">
-                            <img src="images/logo-light.png" alt="">
+                            <img src="./images/logo-karisma.jpg" class="logo-karisma" alt="">
                         </div>
-                        <p> SEO Mauris pharetra quam ut commodo malesuada. Sed a ornare purus, nec cursus tortor. Integer vehicula felis nec nunc pulvinar efficitur. In et semper odio. Sed laoreet ullamcorper augue, ut mattis metus mattis quis.</p>
-                        <p>Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis montes.</p>
+                        <p>Karisma ITB (Keluarga Remaja Masjid Salman ITB) adalah organisasi mahasiswa di bawah naungan Masjid Salman ITB yang berfokus pada hal-hal berkaitan dengan keremajaan.</p>
                     </div><!-- end clearfix -->
                 </div><!-- end col -->
 				
@@ -305,12 +306,12 @@
                             <h3>Information</h3>
                         </div>
                         <ul class="footer-links">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Pricing</a></li>
-							<li><a href="#">About</a></li>
-							<li><a href="#">Faq</a></li>
-							<li><a href="#">Contact</a></li>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./about.html">Tentang Kami</a></li>
+                            <li><a href="./daftar-klc.html">Daftar KLC</a></li>
+							<li><a href="./blog.html">Blog</a></li>
+							<li><a href="./organigram.html">Organigram</a></li>
+							<li><a href="./upcoming-events.html">Agenda Mendatang</a></li>
                         </ul><!-- end links -->
                     </div><!-- end clearfix -->
                 </div><!-- end col -->
@@ -320,7 +321,7 @@
 						<div class="widget-title">
 							<h3>Newsletter</h3>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et tincidunt risus, vitae sollicitudin tellus.</p>
+						<p>Daftarkan e-mailmu untuk mendapatkan berita dari kami.</p>
 						<div class="news-box">
 							<form action="#" method="post">
 								<div class="form-group">
@@ -353,10 +354,10 @@
                         </div>
 
                         <ul class="footer-links">
-                            <li><a href="mailto:#">info@yoursite.com</a></li>
-                            <li><a href="#">www.yoursite.com</a></li>
-                            <li>PO Box 16122 Collins Street West Victoria 8007 Australia</li>
-                            <li>+61 3 8376 6284</li>
+                            <li><a href="mailto:#">karismaitb@salmanitb.com</a></li>
+                            <li><a href="#">www.karismaitb.com</a></li>
+                            <li>Jl. Ganesha 7 Bandung – 40132</li>
+                            <li>Tlp. 022-2530708, Fax. 022-2500042</li>
                         </ul><!-- end links -->
                     </div><!-- end clearfix -->
                 </div><!-- end col -->
@@ -369,7 +370,7 @@
         <div class="container">
             <div class="footer-distributed">
                 <div class="footer-left">
-                    <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">GreatSEO</a> Design By : <a href="https://html.design/">html design</a></p>
+                    <p class="footer-company-name">All Rights Reserved. &copy; 2020 <a href="#">Karisma ITB</a> Design By: <a href="https://html.design/">html design</a></p>
                 </div>
             </div>
         </div><!-- end container -->
