--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
-					<img src="images/logo-karisma.jpg" alt="" id="logo-karisma"/>
+					<img src="images/logo-karisma.jpg" alt="" class="logo-karisma"/>
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars-seo" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
 				  <span class="navbar-toggler-icon"></span>
@@ -69,7 +69,7 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">Lainnya </a>
 							<div class="dropdown-menu" aria-labelledby="dropdown-a">
-								<a class="dropdown-item" href="services.html">Blog</a>
+								<a class="dropdown-item" href="blog.html">Blog</a>
 								<a class="dropdown-item" href="upcoming-events.html">Upcoming Events</a>
 								<a class="dropdown-item" href="organigram.html">Organigram</a>
 							</div>
@@ -514,10 +514,9 @@
                 <div class="col-lg-4 col-md-6 col-xs-12">
                     <div class="widget clearfix">
                         <div class="widget-title">
-                            <img src="images/logo-light.png" alt="">
+                            <img src="./images/logo-karisma.jpg" class="logo-karisma" alt="">
                         </div>
-                        <p> SEO Mauris pharetra quam ut commodo malesuada. Sed a ornare purus, nec cursus tortor. Integer vehicula felis nec nunc pulvinar efficitur. In et semper odio. Sed laoreet ullamcorper augue, ut mattis metus mattis quis.</p>
-                        <p>Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis montes.</p>
+                        <p>Karisma ITB (Keluarga Remaja Masjid Salman ITB) adalah organisasi mahasiswa di bawah naungan Masjid Salman ITB yang berfokus pada hal-hal berkaitan dengan keremajaan.</p>
                     </div><!-- end clearfix -->
                 </div><!-- end col -->
 				
@@ -527,12 +526,12 @@
                             <h3>Information</h3>
                         </div>
                         <ul class="footer-links">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Pricing</a></li>
-							<li><a href="#">About</a></li>
-							<li><a href="#">Faq</a></li>
-							<li><a href="#">Contact</a></li>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./about.html">Tentang Kami</a></li>
+                            <li><a href="./daftar-klc.html">Daftar KLC</a></li>
+							<li><a href="./blog.html">Blog</a></li>
+							<li><a href="./organigram.html">Organigram</a></li>
+							<li><a href="./upcoming-events.html">Agenda Mendatang</a></li>
                         </ul><!-- end links -->
                     </div><!-- end clearfix -->
                 </div><!-- end col -->
@@ -542,7 +541,7 @@
 						<div class="widget-title">
 							<h3>Newsletter</h3>
 						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et tincidunt risus, vitae sollicitudin tellus.</p>
+						<p>Daftarkan e-mailmu untuk mendapatkan berita dari kami.</p>
 						<div class="news-box">
 							<form action="#" method="post">
 								<div class="form-group">
@@ -575,10 +574,10 @@
                         </div>
 
                         <ul class="footer-links">
-                            <li><a href="mailto:#">info@yoursite.com</a></li>
-                            <li><a href="#">www.yoursite.com</a></li>
-                            <li>PO Box 16122 Collins Street West Victoria 8007 Australia</li>
-                            <li>+61 3 8376 6284</li>
+                            <li><a href="mailto:#">karismaitb@salmanitb.com</a></li>
+                            <li><a href="#">www.karismaitb.com</a></li>
+                            <li>Jl. Ganesha 7 Bandung – 40132</li>
+                            <li>Tlp. 022-2530708, Fax. 022-2500042</li>
                         </ul><!-- end links -->
                     </div><!-- end clearfix -->
                 </div><!-- end col -->
@@ -591,7 +590,7 @@
         <div class="container">
             <div class="footer-distributed">
                 <div class="footer-left">
-                    <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">GreatSEO</a> Design By : <a href="https://html.design/">html design</a></p>
+                    <p class="footer-company-name">All Rights Reserved. &copy; 2020 <a href="#">Karisma ITB</a> Design By : KarismaLabs<a href="https://html.design/">html design</a></p>
                 </div>
             </div>
         </div><!-- end container -->
