--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 						<li class="nav-item"><a class="nav-link" href="about.html">Tentang Kami</a></li>
-						<li class="nav-item"><a class="nav-link" href="case-study.html">Daftar KLC</a></li>
+						<li class="nav-item"><a class="nav-link" href="daftar-klc.html">Daftar KLC</a></li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">Lainnya </a>
 							<div class="dropdown-menu" aria-labelledby="dropdown-a">
 								<a class="dropdown-item" href="blog.html">Blog</a>
-								<a class="dropdown-item" href="upcoming-events.html">Upcoming Events</a>
+								<a class="dropdown-item" href="upcoming-events.html">Agenda Mendatang</a>
 								<a class="dropdown-item" href="organigram.html">Organigram</a>
 							</div>
 						</li>
